Add Prometheus + Grafana observability

--- a/.github/workflows/secret-detection.yml
+++ b/.github/workflows/secret-detection.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           python-version: '3.12'
       
-      - name: Install Trivy  # <-- THIS IS THE FIX!
+      - name: Install Trivy  
         run: |
           sudo apt-get update
           sudo apt-get install -y wget apt-transport-https gnupg lsb-release
@@ -416,3 +416,249 @@ jobs:
               body: issueBody,
               labels: ['security', 'critical']
             });
+  # ADD THIS NEW JOB HERE 
+  export-metrics:
+    name: Export Metrics to Prometheus
+    runs-on: ubuntu-latest
+    needs: [scan-all-repositories, exploitation-simulation]
+    if: always()  # Run even if no secrets found
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.SCAN_TOKEN }}
+      
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: '*'
+          merge-multiple: true
+        continue-on-error: true
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      
+      - name: Generate Prometheus metrics
+        run: |
+          python << 'PYTHON_SCRIPT'
+          import json
+          from pathlib import Path
+          from datetime import datetime
+          
+          print("=" * 70)
+          print("GENERATING PROMETHEUS METRICS")
+          print("=" * 70)
+          
+          # Load scan results
+          try:
+              scan_data = json.loads(Path('multi-repo-scan-results.json').read_text())
+              print(f"Loaded scan results: {scan_data['metadata']['total_secrets']} secrets")
+          except:
+              print("[!] No scan results found, using defaults")
+              scan_data = {
+                  'metadata': {'total_repositories': 0, 'total_secrets': 0}, 
+                  'secrets': [], 
+                  'scan_results': []
+              }
+          
+          # Load exploitation results
+          try:
+              exploit_data = json.loads(Path('exploitation-results.json').read_text())
+              print(f"Loaded exploitation results")
+          except:
+              print("No exploitation results found")
+              exploit_data = {
+                  'buckets_accessed': 0,
+                  'files_exfiltrated': 0,
+                  'exploitation_successful': False
+              }
+          
+          # Calculate metrics
+          secrets = scan_data.get('secrets', [])
+          scan_results = scan_data.get('scan_results', [])
+          
+          critical_count = len([s for s in secrets if s.get('severity') == 'CRITICAL'])
+          high_count = len([s for s in secrets if s.get('severity') == 'HIGH'])
+          medium_count = len([s for s in secrets if s.get('severity') == 'MEDIUM'])
+          low_count = len([s for s in secrets if s.get('severity') == 'LOW'])
+          
+          total_repos = len(scan_results)
+          repos_with_secrets = len([r for r in scan_results if r.get('secrets_found', 0) > 0])
+          clean_repos = total_repos - repos_with_secrets
+          
+          print(f"\n[*] Metrics Summary:")
+          print(f"    Total Secrets: {len(secrets)}")
+          print(f"    Critical: {critical_count}, High: {high_count}")
+          print(f"    Repos Scanned: {total_repos}")
+          print(f"    Repos with Secrets: {repos_with_secrets}")
+          
+          # Generate Prometheus metrics format
+          metrics = f"""# HELP secret_scanner_total_secrets Total number of secrets detected
+# TYPE secret_scanner_total_secrets gauge
+secret_scanner_total_secrets {len(secrets)}
+
+# HELP secret_scanner_critical_secrets Number of critical severity secrets
+# TYPE secret_scanner_critical_secrets gauge
+secret_scanner_critical_secrets {critical_count}
+
+# HELP secret_scanner_high_secrets Number of high severity secrets
+# TYPE secret_scanner_high_secrets gauge
+secret_scanner_high_secrets {high_count}
+
+# HELP secret_scanner_medium_secrets Number of medium severity secrets
+# TYPE secret_scanner_medium_secrets gauge
+secret_scanner_medium_secrets {medium_count}
+
+# HELP secret_scanner_low_secrets Number of low severity secrets
+# TYPE secret_scanner_low_secrets gauge
+secret_scanner_low_secrets {low_count}
+
+# HELP secret_scanner_repositories_scanned Total repositories scanned
+# TYPE secret_scanner_repositories_scanned gauge
+secret_scanner_repositories_scanned {total_repos}
+
+# HELP secret_scanner_repositories_with_secrets Repositories containing secrets
+# TYPE secret_scanner_repositories_with_secrets gauge
+secret_scanner_repositories_with_secrets {repos_with_secrets}
+
+# HELP secret_scanner_clean_repositories Repositories with no secrets
+# TYPE secret_scanner_clean_repositories gauge
+secret_scanner_clean_repositories {clean_repos}
+
+# HELP secret_scanner_exploitation_buckets_accessed S3 buckets accessed in exploitation
+# TYPE secret_scanner_exploitation_buckets_accessed gauge
+secret_scanner_exploitation_buckets_accessed {exploit_data.get('buckets_accessed', 0)}
+
+# HELP secret_scanner_exploitation_files_stolen Files exfiltrated in exploitation
+# TYPE secret_scanner_exploitation_files_stolen gauge
+secret_scanner_exploitation_files_stolen {exploit_data.get('files_exfiltrated', 0)}
+
+# HELP secret_scanner_exploitation_success Exploitation simulation success (1=success, 0=fail)
+# TYPE secret_scanner_exploitation_success gauge
+secret_scanner_exploitation_success {1 if exploit_data.get('exploitation_successful') else 0}
+
+# HELP secret_scanner_scan_timestamp Unix timestamp of last scan
+# TYPE secret_scanner_scan_timestamp gauge
+secret_scanner_scan_timestamp {int(datetime.now().timestamp())}
+
+# Per-repository metrics
+"""
+          
+          for repo in scan_results:
+              repo_name = repo['repository'].replace('-', '_').replace('.', '_')
+              secret_count = repo.get('secrets_found', 0)
+              metrics += f'secret_scanner_repo_secrets{{repository="{repo_name}"}} {secret_count}\n'
+          
+          # Count secrets by type
+          secret_types = {}
+          for secret in secrets:
+              title = secret.get('title', 'Unknown').replace(' ', '_').replace('-', '_')
+              secret_types[title] = secret_types.get(title, 0) + 1
+          
+          if secret_types:
+              metrics += "\n# Secrets by type\n"
+              for secret_type, count in secret_types.items():
+                  metrics += f'secret_scanner_secret_type{{type="{secret_type}"}} {count}\n'
+          
+          # Save metrics
+          Path('metrics.prom').write_text(metrics)
+          print(f"\n[✓] Prometheus metrics saved to metrics.prom")
+          print(f"[✓] Total metric lines: {len(metrics.splitlines())}")
+          PYTHON_SCRIPT
+      
+      - name: Create metrics directory
+        run: |
+          mkdir -p prometheus/metrics
+          cp metrics.prom prometheus/metrics/latest.prom
+          
+          # Create timestamped backup
+          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+          cp metrics.prom "prometheus/metrics/metrics_${TIMESTAMP}.prom"
+          
+          # Keep only last 10 metric files
+          cd prometheus/metrics
+          ls -t metrics_*.prom | tail -n +11 | xargs rm -f 2>/dev/null || true
+      
+      - name: Generate JSON metrics for Grafana
+        run: |
+          python << 'PYTHON_SCRIPT'
+          import json
+          from pathlib import Path
+          from datetime import datetime
+          
+          # Load data
+          try:
+              scan_data = json.loads(Path('multi-repo-scan-results.json').read_text())
+          except:
+              scan_data = {'metadata': {}, 'secrets': [], 'scan_results': []}
+          
+          try:
+              exploit_data = json.loads(Path('exploitation-results.json').read_text())
+          except:
+              exploit_data = {}
+          
+          # Create JSON format for easier Grafana querying
+          metrics_json = {
+              "timestamp": datetime.now().isoformat(),
+              "scan": {
+                  "total_secrets": len(scan_data.get('secrets', [])),
+                  "critical": len([s for s in scan_data.get('secrets', []) if s.get('severity') == 'CRITICAL']),
+                  "high": len([s for s in scan_data.get('secrets', []) if s.get('severity') == 'HIGH']),
+                  "repositories_scanned": len(scan_data.get('scan_results', [])),
+                  "repositories_with_secrets": len([r for r in scan_data.get('scan_results', []) if r.get('secrets_found', 0) > 0])
+              },
+              "exploitation": {
+                  "buckets_accessed": exploit_data.get('buckets_accessed', 0),
+                  "files_stolen": exploit_data.get('files_exfiltrated', 0),
+                  "successful": exploit_data.get('exploitation_successful', False)
+              },
+              "repositories": [
+                  {
+                      "name": r['repository'],
+                      "secrets": r.get('secrets_found', 0),
+                      "status": r.get('status', 'unknown')
+                  }
+                  for r in scan_data.get('scan_results', [])
+              ]
+          }
+          
+          Path('prometheus/metrics/metrics.json').write_text(json.dumps(metrics_json, indent=2))
+          print("[✓] JSON metrics saved")
+          PYTHON_SCRIPT
+      
+      - name: Commit metrics to repository
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          
+          git add prometheus/metrics/
+          
+          if git diff --staged --quiet; then
+            echo "[*] No changes to commit"
+          else
+            git commit -m "📊 Update Prometheus metrics [skip ci]"
+            git push || echo "[!] Failed to push metrics (may need to pull first)"
+          fi
+      
+      - name: Upload metrics artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: prometheus-metrics
+          path: |
+            metrics.prom
+            prometheus/metrics/
+          retention-days: 90
+      
+      - name: Display metrics summary
+        run: |
+          echo "=========================================="
+          echo "METRICS EXPORT COMPLETE"
+          echo "=========================================="
+          echo ""
+          cat metrics.prom | grep -E "^secret_scanner" | head -20
+          echo ""
+          echo "[✓] Metrics available at: prometheus/metrics/latest.prom"
+          echo "[✓] Grafana can now visualize this data"
