Fix: Metrics Job

--- a/.github/workflows/secret-detection.yml
+++ b/.github/workflows/secret-detection.yml
@@ -417,85 +417,78 @@ jobs:
               labels: ['security', 'critical']
             });
   export-metrics:
-    name: Export Prometheus Metrics
+  name: Export Prometheus Metrics
+  runs-on: ubuntu-latest
+  needs: [scan-all-repositories, exploitation-simulation]
+  if: always()
+
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.SCAN_TOKEN }}
+
+    - name: Download artifacts
+      uses: actions/download-artifact@v4
+      with:
+        pattern: '*'
+        merge-multiple: true
+      continue-on-error: true
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+
+    - name: Generate Prometheus metrics
+      run: |
+        python3 << 'EOF'
+        import json
+        from pathlib import Path
+        from datetime import datetime
+
+        try:
+            scan_data = json.loads(Path('multi-repo-scan-results.json').read_text())
+        except:
+            scan_data = {'metadata': {'total_secrets': 0}, 'secrets': [], 'scan_results': []}
+
+        try:
+            exploit_data = json.loads(Path('exploitation-results.json').read_text())
+        except:
+            exploit_data = {'buckets_accessed': 0, 'files_exfiltrated': 0}
+
+        secrets = scan_data.get('secrets', [])
+        scan_results = scan_data.get('scan_results', [])
+
+        critical = len([s for s in secrets if s.get('severity') == 'CRITICAL'])
+        high = len([s for s in secrets if s.get('severity') == 'HIGH'])
+        total_repos = len(scan_results)
+        repos_with_secrets = len([r for r in scan_results if r.get('secrets_found', 0) > 0])
+  export-metrics:
+    name: Export Metrics to Prometheus
     runs-on: ubuntu-latest
     needs: [scan-all-repositories, exploitation-simulation]
     if: always()
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.SCAN_TOKEN }}
-      
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          pattern: '*'
+          pattern: "*"
           merge-multiple: true
-        continue-on-error: true
-      
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      
-      - name: Generate Prometheus metrics
+
+      - name: Install dependencies
         run: |
-          python3 << 'EOF'
-          import json
-          from pathlib import Path
-          from datetime import datetime
-          
-          try:
-              scan_data = json.loads(Path('multi-repo-scan-results.json').read_text())
-          except:
-              scan_data = {'metadata': {'total_secrets': 0}, 'secrets': [], 'scan_results': []}
-          
-          try:
-              exploit_data = json.loads(Path('exploitation-results.json').read_text())
-          except:
-              exploit_data = {'buckets_accessed': 0, 'files_exfiltrated': 0}
-          
-          secrets = scan_data.get('secrets', [])
-          scan_results = scan_data.get('scan_results', [])
-          
-          critical = len([s for s in secrets if s.get('severity') == 'CRITICAL'])
-          high = len([s for s in secrets if s.get('severity') == 'HIGH'])
-          total_repos = len(scan_results)
-          repos_with_secrets = len([r for r in scan_results if r.get('secrets_found', 0) > 0])
-          
-          metrics = f"""secret_scanner_total_secrets {len(secrets)}
-secret_scanner_critical_secrets {critical}
-secret_scanner_high_secrets {high}
-secret_scanner_repositories_scanned {total_repos}
-secret_scanner_repositories_with_secrets {repos_with_secrets}
-secret_scanner_exploitation_buckets {exploit_data.get('buckets_accessed', 0)}
-secret_scanner_exploitation_files {exploit_data.get('files_exfiltrated', 0)}
-secret_scanner_timestamp {int(datetime.now().timestamp())}
-"""
-          
-          Path('metrics.prom').write_text(metrics)
-          print(f"Metrics generated: {len(secrets)} secrets found")
-          EOF
-      
-      - name: Create metrics directory
+          sudo apt-get update
+          sudo apt-get install -y python3 python3-pip
+          pip3 install prometheus_client
+
+      - name: Export metrics
         run: |
-          mkdir -p prometheus/metrics
-          cp metrics.prom prometheus/metrics/latest.prom
-      
-      - name: Commit metrics to repo
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add prometheus/metrics/
-          git commit -m "Update Prometheus metrics [skip ci]" || echo "No changes"
-          git push || echo "Push failed"
-      
-      - name: Upload metrics artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: prometheus-metrics
-          path: |
-            metrics.prom
-            prometheus/metrics/
+          python3 export_metrics.py
+   
